site/styles/custom.less
// vARIABLES ---------------------------------//

@spaceBetweenNavItems: .7em;
@navItemsHeight: .75em;
@navButtonPaddingVertical: 1em;
@navButtonPaddingHorizontal: 1.5em;
@navButtonLeftMargin: 1em;
@bodyButtonPaddingVertical: 1em;
@bodyButtonPaddingHorizontal: 1.5em;
@subnavPaddingVertical: 1em;
@subnavPaddingHorizontal: 1.5em;
@accentColor: #ebc713;
@navUnderlineColor: #c5b358;
@socialButtonColor: #c5b358;


// HEADER STUFF ----------------------------- //

// Fixed header

#header {
  position: fixed;
  opacity: .8;
}

// Header width

@media only screen and (min-width: 640px) and (max-width: 1020px) {
  #header {
  padding-left: @sitePadding;
  padding-right: @sitePadding;
}
}

.header-inner {
  // position:relative;
  padding: @headerVertPadding 0;
  //display: table;
  max-width: @pageWidth - 2*@sitePadding;
  //-webkit-box-sizing: border-box;
    // -moz-box-sizing: border-box;
      //    box-sizing: border-box;
}

// underline nav elements upon hover

#mainNavigation {
  .collection:hover, .index:hover, .external:not(:last-child):hover , {
  //text-decoration: underline;
  border-bottom: 1px solid @navUnderlineColor;
  //border-color: #ebc713;
  }
}

#mainNavigation {
.active {
border-bottom: 2px solid @navUnderlineColor;
}
}

.enable-nav-button #headerNav,
.enable-nav-button #sidecarNav {
  border-bottom: 0px solid !important;
}


// adjust padding of nav items

body:not(.force-mobile-nav) {
  .nav-wrapper {
    nav > div {
      > a, label, {
                  padding: @navItemsHeight @spaceBetweenNavItems;
                }
    }      
  }
}

// adjust padding of nav button

.enable-nav-button #headerNav nav>div:not(.folder):last-child a, .enable-nav-button #sidecarNav nav>div:not(.folder):last-child a {
    padding:  @navButtonPaddingVertical @navButtonPaddingHorizontal !important;
  }

// adjust left margin of nav button

.enable-nav-button #headerNav nav>div:not(.folder):last-child a {
  margin-left: @spaceBetweenNavItems;
}


// Change side of folder item in sidecar nav that "+" appears

#sidecarNav .folder label:after {
  content: '+';
  padding-left: 0.25em;
  width: 0.75em;
  display: inline-block;
}

#sidecarNav .folder .folder-toggle-box:checked ~ label:after {
  content:'–'
} /* NOTE: To get this to work, I rcommented out the the code from base.less right after the section called "folder indicator everywhere in mobile style nav" */


// Adjust height of subnav items

html:not(.touch-styles) body:not(.force-mobile-nav) .nav-wrapper .folder .subnav>div a {
  padding: @subnavPaddingVertical @subnavPaddingHorizontal;
}

// Change cursor for folders to be pointer and unclickable

#mainNavigation {
  .folder-toggle-label {
    cursor: default;
    pointer-events: none;
  }
}

// Nav arrow color tweak

#navArrowColor {
  color: @navColor;
}

#navArrowColor:hover {
  color: @navActiveColor;
}

// Social icon color

.social-icons-style-solid.social-icons-color-black .sqs-use--mask {
  fill: @socialButtonColor;
}

